프로필 수정 및 폰트 사이즈 수정

--- a/_posts/2023-01-29-profile.md
+++ b/_posts/2023-01-29-profile.md
@@ -1,20 +1,18 @@
-----
-layout: single
-title: "Hello World"
-----
-
 # **Profile**
 
 <br>
 
-### **Name** &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hayoung Jeong
 
-### **Poisition** &nbsp; Data Analyst
+- **Name** &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hayoung Jeong
 
-### **Skill**  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Python, Pytorch, R, SQL
+- **Poisition** &nbsp; Data Analyst
 
-### **Projects**    (Continuously updated)
+- **Skill**  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Python, Pytorch, R, SQL
+
 <br>
+
+**Projects** &nbsp;&nbsp; (Continuously updated)   
+
 <table class="data-table">
   <tr class="table-header">
     <th>Content</th>
@@ -54,103 +52,245 @@ title: "Hello World"
 </table>
 <br>
 
-### **Education**
+**Education**
   1. [2009-2013] B.S. in Geology, **KYUNGPOOK NATIONAL UNIVERSITY**
   2. [2022-Now] Master of Engineering, Department of Smart Convergence, **Suncheon National University**
 
 <br>
 
-### **Papers**
-  - (KCI) **A Research for Imputation Method of Photovoltaic Power Missing Data to Apply Time Series Models** (doi.org/10.9717/kmms.2021.24.9.1251)
-  - (KCI) **A Research of Prediction of Photovoltaic Power using SARIMA Model** (doi.org/10.9717/kmms.2022.25.1.082)
-  - (KCI) **Research on Model to Diagnose Efficiency Reduction of Inverters using Multilayer Perceptron** (doi.org/10.9717/kmms.2022.25.10.1448)
+**Papers**
+  - (KCI) [A Research for Imputation Method of Photovoltaic Power Missing Data to Apply Time Series Models](http://doi.org/10.9717/kmms.2021.24.9.1251)
+  - (KCI) [A Research of Prediction of Photovoltaic Power using SARIMA Model](http://doi.org/10.9717/kmms.2022.25.1.082)
+  - (KCI) [Research on Model to Diagnose Efficiency Reduction of Inverters using Multilayer Perceptron](http://doi.org/10.9717/kmms.2022.25.10.1448)
 
 <br>
 
-### **Project Description**
+**Project Description**
+
 
 <details>
 <summary>(More or Simple - Click Here!)</summary>
+
+<h2 class="exp">NIA Bigdata Intern (2020.08.24. ~ 2020.12.31)</h2>
+
+  <h6 class="projectName">1. Activation of public bicycles in Gwangju</h6>
+  <table class="projectTbl">
+    <tr class="projectHeader">
+      <th>Title</th>
+      <th>Content</th>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Duration</td>
+      <td>20.09.05 ~ 20.09.24</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Role</td>
+      <td>Aggregate analytics data and make a report</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Using Skills</td>
+      <td>R, Python, Q-GIS</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Project Purpose</td>
+      <td>Based on complaints about public transportation in Gwangju-si, we recommended additional public bicycle stops as a way to revitalize public bicycles to reduce inconvenience.</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Analysis methods</td>
+      <td>Establish public bicycle priority areas based on a transportation disadvantage score derived from a correlation analysis of population, bus ridership, and stop count data. <br> Select the correct installation location by giving credit to facilities that exist in the selected priority installation area.</td>
+    </tr>
+  </table>
+
+  <h6 class="projectName">2. Analysis of call center complaint data in Yeosu-si</h6>
+  <table class="projectTbl">
+    <tr class="projectHeader">
+      <th>Title</th>
+      <th>Content</th>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Duration</td>
+      <td>20.10.05 ~ 20.10.30</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Role</td>
+      <td>Analyze data and make a report</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Using Skills</td>
+      <td>R, Python, Excel</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Project Purpose</td>
+      <td>Analyze complaints to improve response and increase citizen satisfaction with city services</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Analysis methods</td>
+      <td>Extract the main keywords in your complaint data to identify patterns of complaints over time. <br> Analyze whether there is a relationship between complaints by identifying correlations between complaint keywords. <br> I also analyzed how complaints are changing in response to COVID-19.</td>
+    </tr>
+  </table>
+
+  <h6 class="projectName">3. Analyze new public Wi-Fi installations</h6>
+  <table class="projectTbl">
+    <tr class="projectHeader">
+      <th>Title</th>
+      <th>Content</th>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Duration</td>
+      <td>20.11.02 ~ 20.11.30</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Role</td>
+      <td>Analyze data and make a report</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Using Skills</td>
+      <td>Q-GIS, PostgreSQL, Excel</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Project Purpose</td>
+      <td>Select a location for a new public Wi-Fi installation.</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Analysis methods</td>
+      <td>Points are awarded based on the population by age, vulnerable groups, presence of public facilities, urban centers, and the status of cultural assets to select priority areas for installation. <br> In the case of Yeosu City, the population by age and the status of cultural assets had a significant impact on the selection of the installation site. </td>
+    </tr>
+  </table>
   
-
-  1. **NIA Bigdata Intern** (2020.08.24. ~ 2020.12.31)    
+  <h6 class="projectName">4. Analyzing data to determine the best locations for CCTV installations</h6>
+  <table class="projectTbl">
+    <tr class="projectHeader">
+      <th>Title</th>
+      <th>Content</th>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Duration</td>
+      <td>20.12.01 ~ 20.12.31</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Role</td>
+      <td>Analyze data and make a report</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Using Skills</td>
+      <td>Q-GIS, PostgreSQL, Excel</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Project Purpose</td>
+      <td>Select a location to install additional CCTV.</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Analysis methods</td>
+      <td>Using data on the population of women, seniors, and children who are vulnerable to crime, as well as information on the proportion of single-family homes and sex establishments, I selected neighborhoods that are likely to be vulnerable to crime.</td>
+    </tr>
+  </table>
   
-       - **Activation** of public bicycles in Gwangju   
-          
-          |Title|Content|
-          |:---:|---|
-          |Duration|20.09.05 ~ 20.09.24|
-          |Using Skills|R, Python, Q-GIS|
-          |Project purpose|Based on complaints about public transportation in Gwangju-si, we recommended additional public bicycle stops as a way to revitalize public bicycles to reduce inconvenience.|
-          |Analysis methods|1.  Establish public bicycle priority areas based on a transportation disadvantage score derived from a correlation analysis of population, bus ridership, and stop count data. <br> 2.  Select the correct installation location by giving credit to facilities that exist in the selected priority installation area.|
-          |||
-           
-       - **Analysis** of call center complaint data in Yeosu-si   
-          
-          |Title|Content|
-          |:---:|---|
-          |Duration|20.10.05 ~ 20.10.30|
-          |Using Skills|R, Python, Excel|
-          |Project purpose|Analyze complaints to improve response and increase citizen satisfaction with city services|
-          |Analysis methods|1. Extract complaint keywords and analyze basic statistics <br> 2. Analyze word clouds, SNA complaints holistically <br> 3. Analyzing changes in complaints before and after COVID-19 through correlation analysis by complaint category|
-          |||
+  <br>
 
-       - **Analyze** new public Wi-Fi installations   
-          
-          |Title|Content|
-          |:---:|---|
-          |Duration|20.11.02 ~ 20.11.30|
-          |Using Skills|R, Python, Q-GIS|
-          |Project purpose||
-          |Analysis methods||
-          |||
+  <h2 class="exp">TEF Corporation (2021.04.05. ~ )</h2>
 
-       - **Analyzing** data to determine the best locations for CCTV installations  
+  <h6 class="projectName">1. Build a time series data preprocessing process</h6>
+  <table class="projectTbl">
+    <tr class="projectHeader">
+      <th>Title</th>
+      <th>Content</th>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Duration</td>
+      <td>2021.06 ~ 2021.09.</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Role</td>
+      <td>Write code and write papers implementing data preprocessing algorithms</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Using Skills</td>
+      <td>R, Python</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Project Purpose</td>
+      <td>Handling missing values in irregular time series data</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Analysis methods</td>
+      <td>Use a Kalman Filter to Estimate Missing Values in Time Series Data</td>
+    </tr>
+  </table>
 
-          |Title|Content|
-          |:---:|---|
-          |Duration|20.12.01 ~ 20.12.31|
-          |Using Skills||
-          |Project purpose||
-          |Analysis methods||
-          |||
+  <h6 class="projectName">2. Forecasting PV power generation with time series data</h6>
+  <table class="projectTbl">
+    <tr class="projectHeader">
+      <th>Title</th>
+      <th>Content</th>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Duration</td>
+      <td>2021.09. ~ 2022.01.</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Role</td>
+      <td>Write code to implement a prediction algorithm and write a paper</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Using Skills</td>
+      <td>R, Python</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Project Purpose</td>
+      <td>Predicting PV generation using characteristics of time series data</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Analysis methods</td>
+      <td>Forecast power generation using SARIMA, a leading time series analysis model.</td>
+    </tr>
+  </table>
 
-<br>
-
-  1. [2021.04. ~] **TEF Corporation** (2021.04.05. ~ )  
-       - **Build** a time series data preprocessing process   
-
-          |Title|Content|
-          |:---:|---|
-          |Duration|2021.06 ~ 2021.09.|
-          |Using Skills|R, Python|
-          |Project purpose||
-          |Analysis methods||
-          |||
-
-       - **Forecasting** PV power generation with time series data   
-
-          |Title|Content|
-          |:---:|---|
-          |Duration|2021.09. ~ 2022.01.|
-          |Using Skills|R, Python|
-          |Project purpose||
-          |Analysis methods||
-          |||
-
-       - **Fault** detection in PV systems
-
-          |Title|Content|
-          |:---:|---|
-          |Duration|2022.01. ~ 2022.04.|
-          |Using Skills|Python, Pytorch|
-          |Project purpose||
-          |Analysis methods||
-          |||
+  <h6 class="projectName">3. Fault detection in PV systems</h6>
+  <table class="projectTbl">
+    <tr class="projectHeader">
+      <th>Title</th>
+      <th>Content</th>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Duration</td>
+      <td>2022.01. ~ 2022.04.</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Role</td>
+      <td>Research and perform PV anomaly diagnosis methods, implement code, and write papers</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Using Skills</td>
+      <td>Python, Pytorch</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Project Purpose</td>
+      <td>Observing a decrease in efficiency of PV inverters</td>
+    </tr>
+    <tr class="projectRow">
+      <td class="subtitle">Analysis methods</td>
+      <td>Apply yearly data to a multi-layer perceptron to observe efficiency decline</td>
+    </tr>
+  </table>
 
 
 </details>
 
+
+
 <br>
 
-### **Other Experiences** 
+
+---
+
+<br>
+
+**Other Experiences**
+  1. [2014] Instructor(Math, Science)
+  2. [2015-2010] Online Store Manager - Translation(Chinese), Design, Logistics management etc
+
+<br>
+
+**Certification**
+  1. [2019] 컴퓨터 활용능력 1급(대한상공회의소)
+  2. [2021] 정보처리기사 (한국산업인력공단)
